# label-task

./: .gitignore  Makefile  README.md  analyze_differences.py  basedata.py  errors.txt  fill_empty_fields.py  llm_analyst.py  merge_csv_files.py  process_single_batch.py  prompts.py  pyproject.toml  requirements.txt  split_csv.py  summary_stats.py  transform_founders_improved.py
src/: __init__.py  agent.py  basedata.py  basedata_control.py  firecrawl_tool.py  llm_analyst.py  llm_config.py  process_single_batch.py
src/prompt/: __init__.py  executive.md  founder.md  ipo_ma.md  mappings.py  partner.md  product.md  prompts.py  prompts_control.py  prompts_firecrawl.py  template.py
src/tools/: __init__.py  search.py
src/utils/: calculate_cost.py  compare_datasets.py  compare_with_sp_groundtruth.py  fill_empty_fields.py  merge_csv_files.py  merge_firecrawl.py  split_csv.py  task1_correlation_test.py  transform_founders_improved.py  universal_transform.py
